# ZephyrExampleApps

./: .gitignore  README.md
apps/blink/: CMakeLists.txt
apps/blink/src/: main.c
apps/button/: CMakeLists.txt
apps/button/src/: gpio.c  gpio.h  main.c
apps/dts_example/: CMakeLists.txt  example.overlay
apps/dts_example/dts/bindings/: example,test.yaml
apps/dts_example/src/: test.c
apps/dts_example_with_kconfig/: CMakeLists.txt  Kconfig
apps/dts_example_with_kconfig/src/: main.c  test.c
apps/dts_no_modules/: CMakeLists.txt
apps/dts_no_modules/src/: main.c  test.h
apps/dts_test/: CMakeLists.txt  minimal.overlay  prj.conf
apps/dts_test/src/: main.c
apps/example_full/: CMakeLists.txt  VERSION  minimal.overlay  prj.conf
apps/hello_world/: CMakeLists.txt
apps/module_example/: CMakeLists.txt  prj.conf
apps/module_example/src/: main.c
extra_modules/custom/: Kconfig
extra_modules/custom/drivers/gpio/: CMakeLists.txt
extra_modules/custom/drivers/gpio/inc/: gpio.h
extra_modules/custom/drivers/gpio/src/: gpio.c
extra_modules/custom/drivers/test/: Kconfig
extra_modules/custom/drivers/test/inc/: test.h
extra_modules/custom/dts/bindings/: custom,compatible.yaml
extra_modules/gpio/: CMakeLists.txt
extra_modules/gpio/dts/bindings/: custom,gpio.yaml
extra_modules/gpio/gpio_drivers/: CMakeLists.txt  Kconfig
extra_modules/gpio/gpio_drivers/src/: gpio_driver.c
modules/custom/: CMakeLists.txt
modules/custom/drivers/: CMakeLists.txt  Kconfig
modules/custom/drivers/gpio/: CMakeLists.txt  Kconfig
modules/custom/drivers/gpio/inc/: gpio.c  gpio.h
modules/custom/drivers/gpio/src/: gpio.c
modules/custom/drivers/test/: CMakeLists.txt  Kconfig
modules/custom/drivers/test/inc/: test.h
modules/custom/drivers/user_button/: Kconfig
modules/custom/dts/bindings/: custom,gpio.yaml  custom,test.yaml  vendor-prefixes.txt
modules/custom/zephyr/: module.yaml
(+2 files in other folders)
